--- a/src/app/components/messages/messages.component.html
+++ b/src/app/components/messages/messages.component.html
@@ -1,7 +1,9 @@
-<div *ngIf="messageService.messages.length">
-
-    <h2>Messages</h2>
-    <button type="button" class="clear" (click)="messageService.clear()">Clear messages</button>
-    <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+<div class="container">
+    <div class="d-flex justify-content-center align-items-center mt-3 vh-60">
+        <div *ngIf="messageService.messages.length">
+            <h2>Messages</h2>
+            <button type="button" class="clear" (click)="messageService.clear()">Clear messages</button>
+            <div *ngFor='let message of messageService.messages'> {{message}} </div>
+        </div>
+    </div>
 </div>
