--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1 class="text-center border-bottom mb-3">{{title}}</h1>
 <nav>
-    <a routerLink="/dashboard" class="btn btn-outline-primary mx-3">Dashboard</a>
-    <a routerLink="/heroes" class="btn btn-outline-primary ">Heroes</a>
+    <a [routerLink]="'/dashboard'" class="btn btn-outline-primary mx-3">Dashboard</a>
+    <a [routerLink]="'/heroes'" class="btn btn-outline-primary ">Heroes</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
