--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <h2 class="text-center">My Heroes</h2>
-    <ul class="list-unstyled row g-2 mt-5">
-        <li *ngFor="let hero of heroes" class="col-12 col-md-6 col-lg-4 col-xl-3">
-            <a routerLink="/detail/{{hero.id}}"
-                class="btn btn-secondary d-flex flex-row align-items-stretch houver p-0 active">
-                <span class="badge px-3 bg-primary rounded-start">{{hero.id}}</span>
+    <ul class="list-unstyled row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-3 g-3 mt-5">
+        <li *ngFor="let hero of heroes" class="col">
+            <a [routerLink]="'/detail/' + hero.id"
+                class="btn btn-secondary btn-lg d-flex flex-row align-items-stretch hover p-0 active">
+                <span class="badge px-3 py-2 bg-primary rounded-start">{{hero.id}}</span>
                 <span class="name mx-3 align-self-center">{{hero.name}}</span>
             </a>
         </li>
