add btn go back with func location

--- a/src/app/components/hero-detail/hero-detail.component.html
+++ b/src/app/components/hero-detail/hero-detail.component.html
@@ -10,6 +10,7 @@
                             <label for="hero-name" class="form-label">Hero name: </label>
                             <input id="hero-name" [(ngModel)]="hero.name" class="form-control" placeholder="name">
                         </div>
+                        <button type="button" class="btn btn-primary btn-sm" (click)="goBack()">Voltar</button>
                     </div>
                 </div>
             </div>
